cmake_minimum_required(VERSION 3.15)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_AUTOGEN_VERBOSE ON)
set(CMAKE_C_STANDARD 11)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
project(FirstGame)
include_directories(${GLFW_INCLUDE_DIRS})
set(PLATFORM Desktop)
set(SRC_DIR src)
set(EXT_SRC_DIR ${SRC_DIR}/ext)
file(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_SOURCE_DIR} "${SRC_DIR}/*.c")
add_executable(FirstGame ${SOURCE_FILES})
#dependencies
find_package(OpenGL REQUIRED)
find_package(glfw3 3.3 REQUIRED)
target_link_libraries(FirstGame OpenGL::GL)
target_link_libraries(FirstGame glfw)
