cmake_minimum_required(VERSION 3.15)
set($ENV{LD_LIBRARY_PATH} "$ENV{LD_LIBRARY_PATH}:/usr/local/lib")
set(CMAKE_TOOLCHAIN_FILE "/home/david/scripts/buildsystems/vcpkg.cmake")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_AUTOGEN_VERBOSE ON)
set(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fverbose-asm -save-temps -Werror -Wall -msse4.1 -fPIE")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
project(FirstGame)
set(PLATFORM Desktop)
set(SRC_DIR src)
set(EXT_SRC_DIR ${SRC_DIR}/ext)
set(MESH_OPTIMIZER_DIRS ${EXT_SRC_DIR}/meshoptimizer-0.13/src ${EXT_SRC_DIR}/meshoptimizer-0.13/tools)
include_directories(${GLFW_INCLUDE_DIRS} ${EXT_SRC_DIR} ${MESH_OPTIMIZER_DIRS})
file(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_SOURCE_DIR} "${SRC_DIR}/core/*.c")
file(GLOB_RECURSE HEADER_FILES RELATIVE ${CMAKE_SOURCE_DIR} "${SRC_DIR}/core/*.h")
add_executable(FirstGame ${SOURCE_FILES} ${HEADER_FILES} src/core/sse2.h src/core/sse3.h src/core/ssse3.h src/core/sse41.h src/core/gl.h)
#dependencies
find_package(OpenGL REQUIRED)
find_package(glfw3 3.3 REQUIRED)
target_link_libraries(FirstGame OpenGL::GL glfw glad dl m cglm meshoptimizer)
